test data is changed to random generated

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.13.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.17'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+
 }
 
 test {
